--- a/index.html
+++ b/index.html
@@ -1,14 +1,37 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ca">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Valorant</title>
-    <link rel="stylesheet" href="Styles.css">
-
+    <title>Web de Fans de Valorant</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <header>
+        <img src="https://wallpapercave.com/wp/wp7282546.jpg" alt="Logotip de Valorant">
+        <nav>
+            <ul>
+                <li><a href="index.html">Inici</a></li>
+                <li><a href="noticies.html">Notícies</a></li>
+                <li><a href="guies.html">Guies</a></li>
+                <li><a href="about.html">Sobre Nosaltres</a></li>
+                <li><a href="contact.html">Contacte</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section id="hero">
+            <h1>Benvinguts al Web de Fans de Valorant</h1>
+            <p>Tot el que necessiteu saber sobre el món de Valorant.</p>
+        </section>
+        <section id="latest-news">
+            <h2>Últimes Notícies</h2>
+            <!-- El contingut dinàmic de notícies va aquí -->
+        </section>
+    </main>
+    <footer>
+        <p>© 2024 Web de Fans de Valorant</p>
+    </footer>
+    <script src="scripts.js"></script>
 </body>
 </html>
