index.html editat

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Web de Fans de Valorant</title>
+    <title>Valorant</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -21,8 +21,8 @@
     </header>
     <main>
         <section id="hero">
-            <h1>Benvinguts al Web de Fans de Valorant</h1>
-            <p>Tot el que necessiteu saber sobre el món de Valorant.</p>
+            <p>Un shooter tàctic 5v5 basat en personatges</p>
+            <h1>VALORANT</h1>
         </section>
         <section id="latest-news">
             <h2>Últimes Notícies</h2>
@@ -30,7 +30,7 @@
         </section>
     </main>
     <footer>
-        <p>© 2024 Web de Fans de Valorant</p>
+        <p>© 2024 Web de Valorant</p>
     </footer>
     <script src="scripts.js"></script>
 </body>
