--- a/guies.html
+++ b/guies.html
@@ -1,12 +1,48 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ca">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Web de Fans de Valorant - Guies</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <header>
+        <img src="https://wallpapercave.com/wp/wp7282546.jpg" alt="Logotip de Valorant">
+        <nav>
+            <ul>
+                <li><a href="index.html">Inici</a></li>
+                <li><a href="noticies.html">Notícies</a></li>
+                <li><a href="guies.html">Guies</a></li>
+                <li><a href="about.html">Sobre Nosaltres</a></li>
+                <li><a href="contact.html">Contacte</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section id="hero">
+            <h1>Guies bàsiques de Valorant</h1>
+            <p>Guies per als jugadors principals que arribant a valorant </p>
+        </section>
+        <section id="guides">
+            <h2>Guies</h2>
+            <article>
+                <h3>Comença la teva aventura</h3>
+                <p>Directe dels arxius de Brimstone, aquesta és la Guia per a principiants de VALORANT. Ja sigui la teva primera aventura o si vols polir-te, no hi ha ningú millor per explicar-te el necessari que l'agent que ja ho ha vist tot.</p>
+                <br>
+                <p>Però primer, et convidem a gaudir d'aquesta experiència interactiva que et donarà una guia bàsica del desenvolupament d'una partida típica de VALORANT:</p>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/0OcCpKLkIeI" title="Video de YouTube" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+            </article>
+            <article>
+                <h3>Título de la Guia 2</h3>
+                <p>Contenido de la Guia 2...</p>
+            </article>
+        </section>
+    </main>
+    <footer>
+        <p>© 2024 Web de Fans de Valorant</p>
+    </footer>
+    <script src="scripts.js"></script>
 </body>
 </html>
