--- a/noticies.html
+++ b/noticies.html
@@ -4,9 +4,42 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Valorant</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <header>
+        <img src="https://wallpapercave.com/wp/wp7282546.jpg" alt="Logotip de Valorant">
+        <nav>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Directorio</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <div id="hero">
+        <h1>Noticies</h1>
+    </div>
+
+    <section id="latest-news">
+        <h2>Latest News</h2>
+        <div class="news-container">
+            <div class="news-item">
+                <h3>Valorant News 1</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed in turpis leo.</p>
+            </div>
+            <div class="news-item">
+                <h3>Valorant News 2</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed in turpis leo.</p>
+            </div>
+        </div>
+    </section>
+
+    <footer>
+        &copy; 2024 Your Website
+    </footer>
 </body>
 </html>
