--- a/index.html
+++ b/index.html
@@ -26,7 +26,18 @@
         </section>
         <section id="latest-news">
             <h2>Últimes Notícies</h2>
-            <!-- El contingut dinàmic de notícies va aquí -->
+            <a href="noticies.html#news1" class="news-link">
+                <div class="news-item">
+                    <h3>Valorant News 1</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed in turpis leo.</p>
+                </div>
+            </a>
+            <a href="noticies.html#news2" class="news-link">
+                <div class="news-item">
+                    <h3>Valorant News 2</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed in turpis leo.</p>
+                </div>
+            </a>
         </section>
     </main>
     <footer>
