--- a/noticies.html
+++ b/noticies.html
@@ -12,32 +12,27 @@
         <img src="https://wallpapercave.com/wp/wp7282546.jpg" alt="Logotip de Valorant">
         <nav>
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Directorio</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="index.html">Inici</a></li>
+                <li><a href="noticies.html">Notícies</a></li>
+                <li><a href="guies.html">Guies</a></li>
+                <li><a href="about.html">Sobre Nosaltres</a></li>
+                <li><a href="contact.html">Contacte</a></li>
             </ul>
         </nav>
     </header>
-
-    <div id="hero">
-        <h1>Noticies</h1>
-    </div>
-
     <section id="latest-news">
         <h2>Latest News</h2>
         <div class="news-container">
-            <div class="news-item">
+            <div class="news-item" id="news1">
                 <h3>Valorant News 1</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed in turpis leo.</p>
             </div>
-            <div class="news-item">
+            <div class="news-item" id="news2">
                 <h3>Valorant News 2</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed in turpis leo.</p>
             </div>
         </div>
     </section>
-
     <footer>
         &copy; 2024 Your Website
     </footer>
