--- a/index.html
+++ b/index.html
@@ -28,14 +28,42 @@
             <h2>Últimes Notícies</h2>
             <a href="noticies.html#news1" class="news-link">
                 <div class="news-item">
-                    <h3>Valorant News 1</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed in turpis leo.</p>
+                    <h3>Premier: Ascenso y conexión a la escena profesional</h3>
+                    <p>24/04/24</p>
+                    <p>¿Queréis saber más sobre cómo llegar a jugar en el VCT? Habéis acudido al lugar indicado.</p>
+                    <button onclick="location.href='noticies.html#news1';">Ver Artículo</button>
                 </div>
             </a>
             <a href="noticies.html#news2" class="news-link">
                 <div class="news-item">
-                    <h3>Valorant News 2</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed in turpis leo.</p>
+                    <h3>Notas de la versión 8.07 de VALORANT</h3>
+                    <p>16/04/24</p>
+                    <p>Un mensajito de parte de Omen: "¡Las puertas ya no pueden detenerme!".</p>
+                    <button onclick="location.href='noticies.html#news2';">Ver Artículo</button>
+                </div>
+            </a>
+            <a href="noticies.html#news3" class="news-link">
+                <div class="news-item">
+                    <h3>Repaso de la comunidad: Clove</h3>
+                    <p>11/04/24</p>
+                    <p>La comunidad no ha desperdiciado ni un segundo tras ver a Clove: ilustraciones, cosplays y demás.</p>
+                    <button onclick="location.href='noticies.html#news3';">Ver Artículo</button>
+                </div>
+            </a>
+            <a href="noticies.html#news4" class="news-link">
+                <div class="news-item">
+                    <h3>Anuncio de recinto del evento Masters Shanghai</h3>
+                    <p>05/04/24</p>
+                    <p>El segundo Masters tendrá lugar del 23 de mayo al 9 de junio.</p>
+                    <button onclick="location.href='noticies.html#news4';">Ver Artículo</button>
+                </div>
+            </a>
+            <a href="noticies.html#news5" class="news-link">
+                <div class="news-item">
+                    <h3>PENSAD como Controladores PROFESIONALES de VALORANT</h3>
+                    <p>02/04/24</p>
+                    <p>¡Siente el rol de Controlador en VALORANT de la mano de los mejores Controladores profesionales como Boaster, MaKo, Marved, Haodong y muchos más!</p>
+                    <button onclick="location.href='noticies.html#news5';">Ver Artículo</button>
                 </div>
             </a>
         </section>
