--- a/about.html
+++ b/about.html
@@ -1,12 +1,44 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ca">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Sobre Nosaltres</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <header>
+        <img src="https://wallpapercave.com/wp/wp7282546.jpg" alt="Logotip de Valorant">
+        <nav>
+            <ul>
+                <li><a href="index.html">Inici</a></li>
+                <li><a href="noticies.html">Notícies</a></li>
+                <li><a href="guies.html">Guies</a></li>
+                <li><a href="about.html" class="active">Sobre Nosaltres</a></li>
+                <li><a href="contact.html">Contacte</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <h1>El Nostre Equip</h1>
+        <section id="team">
+            <article>
+                <h2>Kevin Meler Muñoz</h2>
+                <p>És un membre actiu del nostre equip.<br>Amb la seva passió per Valorant i la seva habilitat tàctica, Kevin aporta una gran visió estratègica al nostre grup.<br>La seva dedicació i compromís són exemplars, sempre treballant dur per millorar el nostre rendiment col·lectiu.<br>La seva capacitat per comunicar-se de manera clara i efectiva fa que sigui un actiu valuós en les nostres operacions diàries.<br>Amb el seu esforç constant i la seva determinació, Kevin és un pilar fonamental del nostre equip.</p>
+            </article>
+            <article>
+                <h2>Eloy Diaz Muñoz</h2>
+                <p>És un membre destacat del nostre equip amb una gran passió pel món de Valorant.<br>La seva habilitat tècnica i la seva capacitat per adaptar-se a diferents situacions el converteixen en un jugador versàtil i valuós.<br>Amb la seva actitud positiva i el seu compromís amb l'equip, Eloy és un motor d'inspiració per a tots nosaltres.<br>La seva experiència i coneixement del joc ens ajuden a superar els reptes i a millorar constantment.<br>Eloy és un company de confiança i un líder en el camp de batalla, sempre disposat a donar el millor de si mateix per aconseguir els nostres objectius col·lectius.</p>
+            </article>
+            <article>
+                <h2>Juanjo Conejo Hernandez</h2>
+                <p>És una peça clau del nostre equip, amb una gran destresa i experiència en el món de Valorant.<br>La seva presència tranquil·la i el seu domini del joc el converteixen en un jugador impressionant en el camp de batalla.<br>Amb la seva intel·ligència tàctica i la seva capacitat per prendre decisions ràpides, Juanjo és una figura respectada i admirada pels seus companys d'equip.<br>La seva dedicació i la seva actitud positiva són un exemple per a tots nosaltres, motivant-nos a superar els reptes i a assolir grans èxits junts.<br>Amb Juanjo al nostre costat, estem segurs de poder afrontar qualsevol desafiament que ens enfrontem al món de Valorant.</p>
+            </article>
+        </section>
+    </main>
+    <footer>
+        <p>© 2024 Web de Valorant</p>
+    </footer>
 </body>
 </html>
