--- a/guies.html
+++ b/guies.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Descripción de tu sitio web">
     <title>Web de Fans de Valorant - Guies</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="formato.css">
+    <link rel="stylesheet" href="guies.css">
 </head>
 <body>
     <header>
@@ -27,21 +27,18 @@
             <p>Guies per als jugadors principals que arribant a valorant </p>
         </section>
         <section id="guides">
-            <h2>Guies</h2>
             <article>
                 <h3>Comença la teva aventura</h3>
                 <p>Directe dels arxius de Brimstone, aquesta és la Guia per a principiants de VALORANT. Ja sigui la teva primera aventura o si vols polir-te, no hi ha ningú millor per explicar-te el necessari que l'agent que ja ho ha vist tot.</p>
                 <br>
                 <p>Però primer, et convidem a gaudir d'aquesta experiència interactiva que et donarà una guia bàsica del desenvolupament d'una partida típica de VALORANT:</p>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/0OcCpKLkIeI" title="Video de YouTube" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/0OcCpKLkIeI?autoplay=1&mute=1" title="Video de YouTube" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </article>
             <article>
-                <br>
                 <p>A continuació, veuràs tot el que has de saber abans de la primera partida. Para atenció. Potser aprendràs una mica més.</p>
                 <img src="https://images.contentstack.io/v3/assets/bltb6530b271fddd0b1/blte491befa942b6325/5ed530ca98ef630b1d7c164d/WIV_1_Intro_WiV_spa-MX.jpg" alt="Imagen de introducción">
             </article>
             <article>
-                <br>
                 <h3>Escollint els Agents</h3>
                 <p>Abans d'entrar a la primera ronda, podreu escollir entre un grup d'agents; cadascun exerceix un paper específic i compta amb habilitats especials dissenyades per treballar en equip i així assolir la victòria.</p>
                 <img src="https://images.contentstack.io/v3/assets/bltb6530b271fddd0b1/blt443fc9aef406cac4/61f08079789b0a52aba23be3/WIV_2_Roles_updated-LATAM.jpg" alt="Imagen de introducción">
@@ -49,7 +46,6 @@
                 <p>Quan tots hagin seleccionat el seu agent (ah, així que vas triar aquest), apareixeràs en un mapa aleatori i entraràs de manera formal a la primera ronda.</p>
             </article>
             <article>
-                <br>
                 <h3>Fase de compra i armes</h3>
                 <p>Comença la ronda com a atacant o defensor; canviaràs de posició entre rondes. Abans de començar, entraràs a la fase de compres, on podràs adquirir armes i habilitats. El que compris determinarà com pots guanyar. Deixa que l'estil o els enfrontaments guiïn les teves eleccions.</p>
                 <img src="https://images.contentstack.io/v3/assets/bltb6530b271fddd0b1/blt261c41b6e808511b/5ed5316e2b63070f504273da/WIV_3_Round_spa-MX.jpg" alt="Imagen de introducción">
@@ -60,7 +56,6 @@
                 <img src="https://images.contentstack.io/v3/assets/bltb6530b271fddd0b1/blt0a23098bf5dfa92a/5ed531cd461a060f4a368f7e/WIV_4_WEAPONS_spa-MX.jpg" alt="Imagen de introducción">
             </article>
             <article>
-                <br>
                 <h3>Mapes</h3>
                 <p>Cada mapa és diferent per derrotar els teus enemics. Demostra les teves creatives habilitats i la teva precisió en diferents trobades.</p>
                 <br>
@@ -68,15 +63,13 @@
                 <img src="https://images.contentstack.io/v3/assets/bltb6530b271fddd0b1/bltf718711638be2f88/5ed53255752a951015ce412f/WIV_5_Maps_spa-MX.jpg" alt="Imagen de introducción">
             </article>
             <article>
-                <br>
                 <h3>Algunes regles extra</h3>
                 <p>Sí, potser ja sàpigues com arrasar amb els teus enemics a granades, però Brimstone et dirà que moltes d'aquestes formes són molt sorolloses.</p>
                 <img src="https://images.contentstack.io/v3/assets/bltb6530b271fddd0b1/bltb1fffeaf8684b997/5ed5329d859dd01a626899f4/WIV_TACSCHOOL_1_spa-MX.jpg" alt="Imagen de introducción">
                 <img src="https://images.contentstack.io/v3/assets/bltb6530b271fddd0b1/blt9c0fc42a9d5eb807/5ed532d8461a060f4a368f8c/WIV_TACSCHOOL_2_spa-MX.jpg" alt="Imagen de introducción">
                 <p>Si no tens cap altre dubte, prepara't per jugar. Igual que tu, per a nosaltres aquest és només el començament.</p>
-                <br>
                 <p>Et mantindrem al corrent sobre les novetats dels agents, mapes i més a la nostra pàgina de notícies.</p>
-                <img src="https://seeklogo.com/images/V/valorant-logo-FAB2CA0E55-seeklogo.com.png" alt="Imagen de introducción">
+                <img src="https://i.pinimg.com/originals/3a/0e/46/3a0e468a0871d7c1785c48ead1a7d5a2.gif" alt="Imagen de introducción">
             </article>
         </section>
     </main>
