--- a/noticies.html
+++ b/noticies.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Valorant</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="noticies.css">
 </head>
 <body>
     <header>
@@ -20,7 +20,7 @@
         </nav>
     </header>
     <section id="latest-news">
-        <h2>Últimes Notícies</h2>
+        <h2>ÚLTIMES NOTÍCIES</h2>
         <div class="news-container">
             <div class="news-item" id="news1">
                 <h3>PREMIER: ASCENSO Y CONEXIÓN A LA ESCENA PROFESIONAL</h3>
