--- a/noticies.html
+++ b/noticies.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Valorant</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="noticies.css">
 </head>
 <body>
     <header>
