creat fetch i millora about visual

--- a/about.html
+++ b/about.html
@@ -15,8 +15,9 @@
                 <li><a href="index.html">Inici</a></li>
                 <li><a href="noticies.html">Notícies</a></li>
                 <li><a href="guies.html">Guies</a></li>
-                <li><a href="about.html" class="active">Sobre Nosaltres</a></li>
+                <li><a href="about.html">Sobre Nosaltres</a></li>
                 <li><a href="contact.html">Contacte</a></li>
+                <li><a href="fetch.html">Agents de Valorant</a></li>
             </ul>
         </nav>
     </header>
