--- a/guies.html
+++ b/guies.html
@@ -17,6 +17,7 @@
                 <li><a href="guies.html">Guies</a></li>
                 <li><a href="about.html">Sobre Nosaltres</a></li>
                 <li><a href="contact.html">Contacte</a></li>
+                <li><a href="fetch.html">Agents de Valorant</a></li>
             </ul>
         </nav>
     </header>
