--- a/noticies.html
+++ b/noticies.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Valorant</title>
+    <title>Notícies</title>
     <link rel="stylesheet" href="noticies.css">
 </head>
 <body>
