--- a/fetch.html
+++ b/fetch.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Agents de Valorant</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="fetch.css">
 </head>
 <body>
     <header>
