He fet el apartat de contacte

--- a/about.html
+++ b/about.html
@@ -2,15 +2,17 @@
 <html lang="ca">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Descripción de tu sitio web">
     <title>Sobre Nosaltres</title>
+    <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="about.css">
+    <link rel="stylesheet" href="contact.css"> <!-- Agregamos el archivo CSS de contacto -->
 </head>
 <body>
     <header>
         <img src="https://wallpapercave.com/wp/wp7282546.jpg" alt="Logotip de Valorant">
-        <nav>
+        <nav class="contact-nav"> <!-- Agregamos la clase "contact-nav" -->
             <ul>
                 <li><a href="index.html">Inici</a></li>
                 <li><a href="noticies.html">Notícies</a></li>
@@ -43,5 +45,6 @@
     <footer>
         <p>© 2024 Web de Valorant</p>
     </footer>
+    <script src="scripts.js"></script>
 </body>
 </html>
