--- a/guies.html
+++ b/guies.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Descripción de tu sitio web">
-    <title>Web de Fans de Valorant - Guies</title>
+    <title>Guies</title>
     <link rel="stylesheet" href="guies.css">
 </head>
 <body>
