millora visual part noticies

--- a/noticies.html
+++ b/noticies.html
@@ -27,34 +27,39 @@
         </section>
         <section id="latest-news">
             <h2>ÚLTIMES NOTÍCIES</h2>
-            <div class="news-container">
+            <section id="latest-news">
                 <div class="news-item" id="news1">
-                    <h3>PREMIER: ASCENS I CONNEXIÓ AMB L'ESGARRIFOSA ESCENA PROFESSIONAL</h3>
+                    <img src="https://images.contentstack.io/v3/assets/bltb6530b271fddd0b1/blt6c38e9cf34daa078/6626da4cb0ec7784aad6d180/Premier_8_3_KV_Clove.jpg" alt="Imagen de la noticia sobre el ascenso y conexión a la escena profesional">
+                    <h3>PREMIER: ASCENSO Y CONEXIÓN A LA ESCENA PROFESIONAL</h3>
                     <p>Voleu saber més sobre com arribar a jugar al VCT? Heu vingut al lloc indicat.</p>
                     <button onclick="window.location.href='https://playvalorant.com/es-es/news/game-updates/premier-promotion-and-connecting-to-pro-play/';">Veure notícia</button>
                 </div>
                 <div class="news-item" id="news2">
-                    <h3>NOTES DE LA VERSIÓ 8.07 DE VALORANT</h3>
+                    <img src="URL_de_imagen_para_la_segunda_noticia" alt="Imagen de las notas de la versión 8.07 de Valorant">
+                    <h3>NOTAS DE LA VERSIÓN 8.07 DE VALORANT</h3>
                     <p>Un missatget de part d'Omen: "Les portes ja no em poden aturar!".</p>
                     <button onclick="window.location.href='https://playvalorant.com/es-es/news/game-updates/valorant-patch-notes-8-07/';">Veure notícia</button>
                 </div>
                 <div class="news-item" id="news3">
-                    <h3>REPASSAR DE LA COMUNITAT: CLOVE</h3>
+                    <img src="URL_de_imagen_para_la_tercera_noticia" alt="Imagen de repaso de la comunidad: Clove">
+                    <h3>REPASO DE LA COMUNIDAD: CLOVE</h3>
                     <p>La comunitat no ha perdut ni un segon després de veure a Clove: il·lustracions, cosplays i més.</p>
                     <button onclick="window.location.href='https://playvalorant.com/es-es/news/community/community-roundup-clove/';">Veure notícia</button>
                 </div>
                 <div class="news-item" id="news4">
-                    <h3>ANUNCI DE RECINTE DE L'EVENT MASTERS SHANGHAI</h3>
+                    <img src="URL_de_imagen_para_la_cuarta_noticia" alt="Imagen del anuncio de recinto del evento Masters Shanghai">
+                    <h3>ANUNCIO DE RECINTO DEL EVENTO MASTERS SHANGHAI</h3>
                     <p>El segon Masters tindrà lloc del 23 de maig al 9 de juny.</p>
                     <button onclick="window.location.href='https://valorantesports.com/news/masters-shanghai-venue-and-ticket-announcement/';">Veure notícia</button>
                 </div>
                 <div class="news-item" id="news5">
-                    <h3>PENSEU COM A CONTROLADORS PROFESSIONALS DE VALORANT</h3>
+                    <img src="URL_de_imagen_para_la_quinta_noticia" alt="Imagen de pensar como controladores profesionales de Valorant">
+                    <h3>PENSAD COMO CONTROLADORES PROFESIONALES DE VALORANT</h3>
                     <p>Sentiu el paper de Controlador a VALORANT de la mà dels millors Controladors professionals com Boaster, MaKo, Marved, Haodong i molts més!</p>
                     <button onclick="window.location.href='https://www.youtube.com/watch?v=MG88wY9J-oI';">Veure notícia</button>
                 </div>
-            </div>
-        </section>
+            </section>
+            
     </main>
     <footer>
         &copy; Web de Valorant
