millora visual responsive

--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
         </section>
     </main>
     <footer>
-        <p>© 2024 Web de Fans de Valorant</p>
+        <p>© 2024 Web de Valorant</p>
     </footer>
     <script src="scripts.js"></script>
 </body>
