millora visual agents valorant i millora footer

--- a/fetch.html
+++ b/fetch.html
@@ -27,7 +27,7 @@
         </div>
 
         <select id="agent-select">
-            <option value="">Seleccione un agent</option>
+            <option value="">Seleccioni un agent</option>
         </select>
         
         <div id="agent-info"></div>
