--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
         </section>
     </main>
     <footer>
-        <p>© Web de Valorant</p> <!-- Text de drets d'autor -->
+        <p>© 2024 Valorant. Tots els drets reservats.</p>
     </footer>
     <script src="scripts.js"></script> <!-- Enllaç a script extern per a funcionalitat addicional -->
 </body>
