--- a/about.html
+++ b/about.html
@@ -1,18 +1,27 @@
 <!DOCTYPE html>
 <html lang="ca">
 <head>
+    <!-- Establir la codificació de caràcters -->
     <meta charset="UTF-8">
+    <!-- Establir la mida de la pantalla per a dispositius mòbils -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Descripción de tu sitio web">
+    <!-- Descripció del contingut del lloc web -->
+    <meta name="description" content="Descripció de tu lloc web">
+    <!-- Títol de la pàgina -->
     <title>Sobre Nosaltres</title>
+    <!-- Enllaç als arxius CSS -->
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="about.css">
 </head>
 <body>
+    <!-- Capçalera de la pàgina -->
     <header>
+        <!-- Logotip del joc Valorant -->
         <img src="https://wallpapercave.com/wp/wp7282546.jpg" alt="Logotip de Valorant">
+        <!-- Menú de navegació -->
         <nav class="contact-nav"> 
             <ul>
+                <!-- Enllaços a altres pàgines -->
                 <li><a href="index.html">Inici</a></li>
                 <li><a href="noticies.html">Notícies</a></li>
                 <li><a href="guies.html">Guies</a></li>
@@ -22,35 +31,53 @@
             </ul>
         </nav>
     </header>
+    <!-- Contingut principal de la pàgina -->
     <main>
+        <!-- Títol de la secció -->
         <h1>EL NOSTRE EQUIP</h1>
+        <!-- Secció que conté la informació dels membres de l'equip -->
         <section id="team">
+            <!-- Article sobre el membre Kevin Meler Muñoz -->
             <article>
+                <!-- Títol del membre -->
                 <h2>Kevin Meler Muñoz</h2>
+                <!-- Descripció del membre -->
                 <p>És un membre actiu del nostre equip. Amb la seva passió per Valorant i la seva habilitat tàctica, Kevin aporta una gran visió estratègica al nostre grup.La seva dedicació i compromís són exemplars, sempre treballant dur per millorar el nostre rendiment col·lectiu. La seva capacitat per comunicar-se de manera clara i efectiva fa que sigui un actiu valuós en les nostres operacions diàries. Amb el seu esforç constant i la seva determinació, Kevin és un pilar fonamental del nostre equip.</p>
+                <!-- Enllaç al perfil de LinkedIn de Kevin -->
                 <a href="https://www.linkedin.com/in/kevin-meler-mu%C3%B1oz-2b10192b6/" target="_blank">
-                <img src="./images/Kevin.jpg" alt="Kevin">
+                    <img src="./images/Kevin.jpg" alt="Kevin">
                 </a>
             </article>
+            <!-- Article sobre el membre Eloy Diaz Muñoz -->
             <article>
+                <!-- Títol del membre -->
                 <h2>Eloy Diaz Muñoz</h2>
+                <!-- Descripció del membre -->
                 <p>És un membre destacat del nostre equip amb una gran passió pel món de Valorant.La seva habilitat tècnica i la seva capacitat per adaptar-se a diferents situacions el converteixen en un jugador versàtil i valuós.Amb la seva actitud positiva i el seu compromís amb l'equip, Eloy és un motor d'inspiració per a tots nosaltres.La seva experiència i coneixement del joc ens ajuden a superar els reptes i a millorar constantment.Eloy és un company de confiança i un líder en el camp de batalla, sempre disposat a donar el millor de si mateix per aconseguir els nostres objectius col·lectius.</p>
+                <!-- Enllaç al perfil de LinkedIn d'Eloy -->
                 <a href="https://www.linkedin.com/in/eloy-diaz-mu%C3%B1oz-87b26023b/" target="_blank">
-                <img src="./images/Eloy.png" alt="Eloy">
-            </a>
+                    <img src="./images/Eloy.png" alt="Eloy">
+                </a>
             </article>
+            <!-- Article sobre el membre Juanjo Conejo Hernandez -->
             <article>
+                <!-- Títol del membre -->
                 <h2>Juanjo Conejo Hernandez</h2>
+                <!-- Descripció del membre -->
                 <p>És una peça clau del nostre equip, amb una gran destresa i experiència en el món de Valorant.La seva presència tranquil·la i el seu domini del joc el converteixen en un jugador impressionant en el camp de batalla.Amb la seva intel·ligència tàctica i la seva capacitat per prendre decisions ràpides, Juanjo és una figura respectada i admirada pels seus companys d'equip.<br>La seva dedicació i la seva actitud positiva són un exemple per a tots nosaltres, motivant-nos a superar els reptes i a assolir grans èxits junts.Amb Juanjo al nostre costat, estem segurs de poder afrontar qualsevol desafiament que ens enfrontem al món de Valorant.</p>
+                <!-- Enllaç al perfil de LinkedIn de Juanjo -->
                 <a href="https://www.linkedin.com/in/juanjo-conejo-9150462b6/" target="_blank">
-                <img src="./images/juanjo.jpg" alt="Juanjo">
-            </a>
+                    <img src="./images/juanjo.jpg" alt="Juanjo">
+                </a>
             </article>
         </section>
     </main>
+    <!-- Peu de pàgina -->
     <footer>
+        <!-- Informació de drets d'autor -->
         <p>© 2024 Valorant. Tots els drets reservats.</p>
     </footer>
+    <!-- Fitxer JavaScript -->
     <script src="scripts.js"></script>
 </body>
 </html>
