--- a/contact.html
+++ b/contact.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="ca">
 <head>
-    <meta charset="UTF-8"> <!-- Codificació de caràcters -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Configuració de la finestra gràfica per a dispositius mòbils -->
-    <meta name="description" content="Descripció del teu lloc web"> <!-- Descripció del lloc per a motors de cerca -->
+    <meta charset="UTF-8"> <!-- Estableixo la codificació de caràcters -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Configuro la visualització per a dispositius mòbils -->
+    <meta name="description" content="Descripció del teu lloc web"> <!-- Descripció del lloc per als motors de cerca -->
     <title>Contacte</title> <!-- Títol de la pàgina -->
-    <link rel="stylesheet" href="index.css"> <!-- Enllaç a full d'estils index.css -->
-    <link rel="stylesheet" href="contact.css"> <!-- Enllaç a full d'estils contact.css -->
+    <link rel="stylesheet" href="index.css"> <!-- Enllaç al full d'estils index.css -->
+    <link rel="stylesheet" href="contact.css"> <!-- Enllaç al full d'estils contact.css -->
 </head>
 <body>
     <header>
@@ -39,6 +39,6 @@
     <footer>
         <p>© 2024 Valorant. Tots els drets reservats.</p>
     </footer>
-    <script src="scripts.js"></script> <!-- Enllaç a script extern per a funcionalitat addicional -->
+    <script src="scripts.js"></script> <!-- Enllaç a l'script extern per a funcionalitat addicional -->
 </body>
 </html>
